--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -293,7 +293,7 @@ display: block;
   pointer-events: all;
 }
 .sec-one{
-  padding-top: 10em;
+  padding-top: 7em;
   width: 95%;
   position: relative;
   display: flex;
@@ -513,17 +513,19 @@ font-size: 15px;
 letter-spacing: .3px;
 }
   #input-tip-icon{
-          fill: #464BFF99;
+          fill: #747F91B8;
           transition: .2s;
+          height: 22px;
         }
         #input-tip-icon:active {
         
           transform: scale(.9);
       }
       .indicate-save-inputs-svg{ 
-        fill: #464BFFB0;
+        fill: #747F91;
         position: absolute;
         right: 25px;
+        height: 22px;
       }
       .expanded-input-option-svg{
       fill: #55606c;
@@ -609,9 +611,9 @@ padding: 5px;
 }
 .input-group select,
 .input-group input[type="text"],
-.input-group input[type="number"] {
+.input-group input[type="number"],
+.input-group input[type="date"] {
   box-sizing: border-box;
-  font-family: zalando;
   font-size: 16px;
   line-height: 20px;
   color: #111;
@@ -623,6 +625,16 @@ padding: 5px;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
   outline: none;
   width: 100%;
+  font-family: zalando;
+}
+.input-group input[type="date"] {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23464BFF'%3E%3Cpath d='M320-400q-17 0-28.5-11.5T280-440q0-17 11.5-28.5T320-480q17 0 28.5 11.5T360-440q0 17-11.5 28.5T320-400Zm160 0q-17 0-28.5-11.5T440-440q0-17 11.5-28.5T480-480q17 0 28.5 11.5T520-440q0 17-11.5 28.5T480-400Zm160 0q-17 0-28.5-11.5T600-440q0-17 11.5-28.5T640-480q17 0 28.5 11.5T680-440q0 17-11.5 28.5T640-400ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 20px 20px;
+  font-size: .9em;
+  font-family: alanSans;
+font-weight: 600;
 }
 .input-group select {
   appearance: none;
@@ -637,7 +649,8 @@ padding: 5px;
 }
 .input-group select:focus,
 .input-group input[type="text"]:focus,
-.input-group input[type="number"]:focus {
+.input-group input[type="number"]:focus,
+.input-group input[type="date"]:focus{
   border-color: #464BFF;
   box-shadow: 0 0 0 3px #464BFF17;
 }
@@ -703,6 +716,7 @@ padding-left: 0;
 text-align: center;
   border: none;
   outline: none;
+  flex-basis: 30%;
   box-sizing: border-box;
   appearance: none;
   -webkit-appearance: none;
@@ -799,15 +813,42 @@ text-align: center;
   color: #464BFF;
   padding: 12px;
 }
+.input-group .currency-or-unit-input-select select {
+  flex: 0 0 auto;
+  font-family: alanSans;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  color: #464BFF;
+  padding: 12px 36px 12px 12px;
+  min-height: 48px;
+  padding-left: 0;
+  text-align: center;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30.727 30.727' xml:space='preserve'><path fill='%232428AF' d='M29.994 10.183 15.363 24.812.733 10.184a2.5 2.5 0 1 1 3.536-3.536l11.095 11.093L26.461 6.647a2.5 2.5 0 1 1 3.533 3.536'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 14px;
+  transition: .2s;
+}
+.input-group .currency-or-unit-input-select select:focus{
+  outline: none;
+box-shadow: none;
+border: none;
+  background-color: #75778121;
+}
+.currency-or-unit-input-select{
+  flex-basis: 40%;
+}
 /************************/
 
-input[type="date"]{
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23464BFF'%3E%3Cpath d='M320-400q-17 0-28.5-11.5T280-440q0-17 11.5-28.5T320-480q17 0 28.5 11.5T360-440q0 17-11.5 28.5T320-400Zm160 0q-17 0-28.5-11.5T440-440q0-17 11.5-28.5T480-480q17 0 28.5 11.5T520-440q0 17-11.5 28.5T480-400Zm160 0q-17 0-28.5-11.5T600-440q0-17 11.5-28.5T640-480q17 0 28.5 11.5T680-440q0 17-11.5 28.5T640-400ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z'/%3E%3C/svg%3E");
-background-repeat: no-repeat;
-background-position: right 10px center;
-background-size: 20px 20px;
-font-size: .9em;
-}
+
 
 .row-input-wrap{
   display: flex;
@@ -839,31 +880,6 @@ margin-bottom: 0;
 }
 .currency-select-svg:active{
   transform: scale(.93);
-}
-
-
-.currency-or-unit-input-select{
-  display: flex;
-align-items: center;
-justify-content: flex-start;
-margin-right: -1em;
-gap: .5em;
-border-top-left-radius: 12px;
-border-bottom-left-radius: 12px;
-padding: 5px;
-padding-right: 10px;
-width: 35%;
-transition: .25s;
-}
-.currency-or-unit-input-select select{
-  border: none;
-  outline: none;
-  margin: 0;
-  background-color: transparent;
-  color: #464BFF;
-}
-.currency-or-unit-input-select:focus-within{
-  background: #61628B30;
 }
 .currency-popup-overlay {
   position: fixed;
