--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -627,6 +627,12 @@ padding: 5px;
   width: 100%;
   font-family: zalando;
 }
+.input-group input.result,
+.input-group select.result,
+.input-group textarea.result {
+  color: #464BFF;
+  transition: .3s;
+}
 .input-group input[type="date"] {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23464BFF'%3E%3Cpath d='M320-400q-17 0-28.5-11.5T280-440q0-17 11.5-28.5T320-480q17 0 28.5 11.5T360-440q0 17-11.5 28.5T320-400Zm160 0q-17 0-28.5-11.5T440-440q0-17 11.5-28.5T480-480q17 0 28.5 11.5T520-440q0 17-11.5 28.5T480-400Zm160 0q-17 0-28.5-11.5T600-440q0-17 11.5-28.5T640-480q17 0 28.5 11.5T680-440q0 17-11.5 28.5T640-400ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
@@ -661,18 +667,6 @@ font-weight: 600;
 }
 .input-group input[type="number"] {
   -moz-appearance: textfield;
-}
-.result {
-font-weight: 400;
-color: #464BFF;
-transition: .3s;
-}
-.result:focus{
-  color: #000!important;
-}
-input.flashResult{
-  color: #000;
-  transition: color 0.4s ease;
 }
 .input-group .input-select-wrap {
   display: flex;
