--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -21,13 +21,6 @@ html {
 }
 
 @font-face {
-  font-family: 'OpenSans';
-  src: url("/assets/fonts/OpenSans-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
   font-family: 'Young';
   src: url("/assets/fonts/young.woff2");
   font-weight: 400;
@@ -620,7 +613,7 @@ padding: 5px;
   border: 1.4px solid #464BFF2B;
   border-radius: 8px;
   padding: 12px 36px 12px 12px;
-  min-height: 48px;
+  min-height: 46px;
   background-color: #fff;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
   outline: none;
@@ -690,7 +683,7 @@ font-weight: 600;
   line-height: 20px;
   color: #111;
   padding: 12px;
-  min-height: 48px;
+  min-height: 46px;
   border: none;
   outline: none;
   background: transparent;
@@ -705,7 +698,7 @@ font-weight: 600;
   line-height: 20px;
   color: #464BFF;
   padding: 12px 36px 12px 12px;
-  min-height: 48px;
+  min-height: 46px;
 padding-left: 0;
 text-align: center;
   border: none;
@@ -765,7 +758,7 @@ text-align: center;
   color: #42445AD9;
   padding: 12px;
   padding-right: 0;
-  min-height: 48px;
+  min-height: 46px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -779,7 +772,7 @@ text-align: center;
   line-height: 20px;
   color: #111;
   padding: 12px;
-  min-height: 48px;
+  min-height: 46px;
   border: none;
   outline: none;
   background: transparent;
@@ -804,8 +797,13 @@ text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
   color: #464BFF;
   padding: 12px;
+  font-size: 15px;
+}
+.secondary-style{
+  color: #747F91;
 }
 .input-group .currency-or-unit-input-select select {
   flex: 0 0 auto;
@@ -815,7 +813,7 @@ text-align: center;
   line-height: 20px;
   color: #464BFF;
   padding: 12px 36px 12px 12px;
-  min-height: 48px;
+  min-height: 46px;
   padding-left: 0;
   text-align: center;
   border: none;
@@ -840,34 +838,13 @@ border: none;
 .currency-or-unit-input-select{
   flex-basis: 40%;
 }
-/************************/
-
-
-
-.row-input-wrap{
+.double-row-inputs-wrap{
   display: flex;
-gap: 8px;
-width: 100%;
+  gap: .5em;
+  flex-basis: 50%;
 }
-.row-input-label-wrap{
-  display: flex;
-gap: 8px;
-width: 100%;
-align-items: center;
-justify-content: center;
-}
-.row-input-label-wrap label{
-  display: flex;
-align-items: center;
-gap: 0.5em;
-font-weight: 550;
-font-family: "Young";
-color: #575865;
-font-size: 17px;
-width: 95%;
-position: relative;
-margin-bottom: 0;
-}
+/******************************/
+
 .currency-select-svg{
   fill: #464BFF;
   transition: .15s;
