--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -1624,13 +1624,11 @@ color: #4F5163;
 
 .vote-tooltip {
   position: absolute;
-  top: -35px;
-  left: 50%;
   transform: translateX(-50%) scale(0.8);
   background: white;
   color: #1f1f1f;
-  font-size: 0.8em;
-  padding: 6px 12px;
+  font-size: 0.7em;
+  padding: 6px 8px;
   border-radius: 6px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   opacity: 0;
@@ -1654,7 +1652,7 @@ color: #4F5163;
    border-radius: 15px;
    border: 1px solid #42445A1C;
    margin-top: 1.5em;
-   font-family: "Young";
+   font-family: Young;
    box-shadow: 0 2px 60px #464BFF03, 0 1px 15px #464BFF03;
  }
  .similar-calculators-wrap h2{
@@ -1663,7 +1661,7 @@ color: #4F5163;
 align-items: center;
 gap: .3em;
 font-family: lexend;
-font-weight: 400;
+font-weight: 600;
  }
  
  .similar-calculators{
@@ -1689,6 +1687,9 @@ font-weight: 400;
   border-radius: 10px;
   border: none;
   cursor: help;
+gap: .3em;
+font-family: lexend;
+font-weight: 400;
 }
 .similar-calculators a::after {
   content: "";
