--- a/assets/css/categorised-calculators-list.css
+++ b/assets/css/categorised-calculators-list.css
@@ -693,6 +693,52 @@ font-family: young;
 #decline-cookieBtn:hover{
   background: #484A582E;
 }
+  /********* Adsterra ***********/
+.adsterra-anchor-fixed {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+padding-top: 4em;
+text-align: center;
+background: #fff;
+padding-bottom: 5px;
+z-index: 999;
+opacity: 0;
+pointer-events: none;
+}
+.adsterra-anchor-fixed iframe {
+margin: auto;
+display: block;
+border-radius: 13px;
+padding: 4px;
+background: #fff;
+}
+.adsterra-anchor {
+position: fixed;
+bottom: 0;
+left: 0;
+width: 100%;
+text-align: center;
+background: #fff;
+box-shadow: 0 2px 20px #464BFF14, 0 1px 15px #464BFF14;
+border-top-right-radius: 12px;
+border-top-left-radius: 12px;
+}
+.adsterra-anchor iframe {
+margin: auto;
+display: block;
+border-radius: 13px;
+padding: 8px;
+}
+/********* Adsterra ***********/
+.adsterra-anchor-fixed iframe {
+  margin: auto;
+  display: block;
+  border-radius: 13px;
+  padding: 8px;
+}
+/****************************/
 /****************************/
 footer{
   width: 100%;
