--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -503,7 +503,7 @@ background: #464BFF29;
 }
 
 .option-name {
-  font-family: "young";
+  font-family: Alansans;
   color: #575865;
 font-size: 15px;
 letter-spacing: .3px;
@@ -751,7 +751,7 @@ text-align: center;
   font-size: 16px;
   line-height: 20px;
   color: #111;
-  padding: 12px;
+  padding: 10px;
   min-height: 32px;
   border: none;
   outline: none;
@@ -773,14 +773,14 @@ text-align: center;
   -moz-appearance: textfield;
 }
 .unit-display {
-  font-family: young;
+  font-family: Alansans;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
   color: #464BFF;
   padding: 12px;
-  padding-left: 0;
+  padding-left: 5px;
   font-size: 15px;
 }
 .secondary-style{
