--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -549,7 +549,7 @@ letter-spacing: .3px;
   align-items: center;
   gap: 0.5em;
   font-weight: 550;
-  font-family: young;
+  font-family: Alansans;
   color: #575865;
   font-size: 16px;
   width: 100%;
@@ -1103,9 +1103,10 @@ outline: none;
   opacity: 1;
   transform: translateX(-50%) scale(1);
 }
+
 .input-tooltip-float {
   position: absolute;
-  background-color: #393C3F;
+  background-color: #211F1F;
   color: #fff;
   font-size: 13px;
   letter-spacing: .25px;
@@ -1113,31 +1114,38 @@ outline: none;
   padding: 6px 10px;
   border-radius: 10px;
   max-width: 250px;
-  z-index: 9999;
-  font-family: "young";
+  z-index: 999;
+  font-family: Alansans;
   white-space: pre-wrap;
   word-break: break-word;
   transform-origin: bottom center;
   line-height: 1.4;
-  transform: scale(0.9);
-  visibility: hidden;
-  transition: transform 0.16s cubic-bezier(0.4, 0, 0.2, 1);
   
+  display: none;
+  opacity: 0;
+  transform: scale(0.8) translateY(10px);
+  transition: opacity 0.16s cubic-bezier(0.4, 0, 0.2, 1),
+    transform 0.16s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-tooltip-float::after {
- content: "";
+  content: "";
   position: absolute;
-  bottom: -6px;
+  bottom: -4px;
   left: 50%;
   transform: translateX(-50%);
-  border-width: 6px 6px 0 6px;
-  border-style: solid;
-  border-color: #393C3F transparent transparent transparent;
+  width: 10px;
+  height: 10px;
+  background-color: #211F1F;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  border-radius: 0 0 3px 0;
+  transform: translateX(-50%) rotate(45deg);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 .input-tooltip-float.visible {
-  visibility: visible;
-  transform: scale(1);
+  opacity: 1;
+  transform: scale(1) translateY(0);
 }
 /********************/
 .sec-seperate{
@@ -1755,20 +1763,20 @@ font-family: AlanSans;
     color: #2E31AD;
   }
   .description-txt p{
-    color: #515353;
+    color: #646565;
 font-size: 1.01em;
-line-height: 1.72;
+line-height: 1.8;
   }
 .description-special-explanatory {
   background-color: #F5F5F5;
   border: 1px solid #E7E7E7;
   border-left: 3px solid #464BFF;
-  padding: 18px 16px;                  /* inner spacing */
-  border-radius: 6px;                  /* slightly rounded corners */
-  font-family: AlanSans;      /* readable font */
-  font-size: 16px;                     /* medium text */
-  color: #333;                         /* dark text for contrast */
-  line-height: 1.5;                    /* comfortable line height */
+  padding: 18px 16px; 
+  border-radius: 6px;
+  font-family: AlanSans;
+  font-size: 16px;
+  color: #333;
+  line-height: 1.5;
   display: inline-block;
   margin-top: -20px;
   margin-bottom: 20px;
@@ -1880,7 +1888,7 @@ font-family: young;
 #decline-cookieBtn:hover{
   background: #484A582E;
 }
-/* Overlay for container styling */
+/* overlay for container  */
 .container.flash {
   position: relative;
   overflow: hidden;
