--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -295,9 +295,10 @@ display: block;
   font-size: .8em;
 color: #42445ACC;
 margin-bottom: -1.01em;
+font-family: Alansans;
 }
 .last-updated-text strong {
-  font-weight: 400;
+  font-weight: 500;
   color: #000;
 }
 .hero-sec{
@@ -396,12 +397,10 @@ box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 4px;
     position: absolute;
     right: -6px;
     top: -6px;
-    
   }
 
   .checkbox-wrapper-toggle .for-toggle-checkbox, .checkbox-wrapper-toggle .for-toggle-checkbox::after {
     transition: all 100ms ease-out;
-    
   }
 
   .checkbox-wrapper-toggle .for-toggle-checkbox::after {
@@ -426,13 +425,11 @@ box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 4px;
 
   .checkbox-wrapper-toggle .for-toggle-checkbox:checked {
     background-color: #464BFF;
-    
   }
 
   .checkbox-wrapper-toggle .for-toggle-checkbox:checked::after {
     background-color: #fff;
     left: 13px;
-    
   }
 
   .checkbox-wrapper-toggle :focus:not(.focus-visible) {
